# universe-idle

./: .clang_complete  .dir-locals.el  .gitignore  .projectile  CMakeLists.txt  README.md  compile.sh  universe-idle.org  universe-idle.pro
gui/: GameGui.cpp  GameGui.h  UniverseIdleGUI.ui  UpgradeBox.cpp  UpgradeBox.h  gui_helpers.cpp  gui_helpers.h
include/: BigNum.h  BoughtUpgrade.h  Event.h  Game.h  History.h  Simulate_game.h  Strategy.h  Upgrade.h
include/class/: Acceleration.h  BigNum.h  BoughtUpgrade.h  Distance.h  Game.h  GameState.h  History.h  PhysicalUnit.h  Price.h  PurchaseManager.h  Resource.h  ResourcesList.h  ResourcesManager.h  Speed.h  Time.h  Upgrade.h  UpgradesList.h  UpgradesManager.h  a_class.h
include/gui/: FenCodeGenere.h  FenPrincipale.h  GameGui.h  ui_UniverseIdleGUI.h
include/helpers/: Initiate.h  Simulate_game.h  Strategy.h  computations.h  game_global_variables.h  resources_computation.h  resources_helper.h  run_simulator.h  upgrades_helper.h
include/libhello/: english.h  french.h
include/main/: Game.h  GameController.h  UniverseIdle.h  game_configuration.h  game_global_variables.h  initiate.h
include/managment/: BoughtUpgrade.h  GameState.h  History.h
include/physics/: Acceleration.h  Distance.h  PhysicalUnit.h  Speed.h  Time.h  compute_physics.h  constant_distances.h  constants_physics.h
include/ship/: Computer.h  Price.h  Resource.h  ResourcesList.h  ResourcesManager.h  Upgrade.h  UpgradesList.h  UpgradesManager.h  computations.h  resources_helper.h  upgrades_configuration.h  upgrades_configuration.h~  upgrades_helper.h
include/simulation/: Simulate_game.h  Strategy.h  run_simulator.h
include/util/: BigNum.h
src/: BigNum.cpp  BoughtUpgrade.cpp  Game.cpp  Simulate_game.cpp  Strategies.cpp  Upgrade.cpp  main.cpp  program.cpp
src/class/: Acceleration.cpp  BigNum.cpp  BoughtUpgrade.cpp  Distance.cpp  Game.cpp  GameState.cpp  History.cpp  Initiate.cpp  PhysicalUnit.cpp  Price.cpp  PurchaseManager.cpp  Resource.cpp  ResourcesList.cpp  ResourcesManager.cpp  Speed.cpp  Time.cpp  Upgrade.cpp  UpgradeManager.cpp  UpgradesList.cpp  a_class.cpp
src/gui/: FenCodeGenere.cpp  FenPrincipale.cpp  main.cpp
src/helpers/: Initiate.cpp  Simulate_game.cpp  Strategies.cpp  Strategy.cpp  computations.cpp  game_global_variables.cpp  resources_computation.cpp  resources_helper.cpp  run_simulator.cpp
src/libhello/: english.cpp  french.cpp
src/main/: Game.cpp  GameController.cpp  Initiate.cpp  UniverseIdle.cpp  game_global_variables.cpp  main.cpp
src/managment/: BoughtUpgrade.cpp  GameState.cpp  History.cpp
src/objects/: cost_tables.cpp
src/physics/: Acceleration.cpp  Distance.cpp  PhysicalUnit.cpp  Speed.cpp  Time.cpp  compute_physics.cpp  constant_distances.cpp
src/ship/: Computer.cpp  Price.cpp  Resource.cpp  ResourcesList.cpp  ResourcesManager.cpp  Upgrade.cpp  UpgradeManager.cpp  UpgradesList.cpp  computations.cpp
src/simulation/: Simulate_game.cpp  Strategy.cpp  run_simulator.cpp
src/util/: BigNum.cpp
test/: CMakeLists.txt
test/src/: BigNum_tests.cpp  Distance_test.cpp  Speed_test.cpp  Time_test.cpp  Upgrade_tests.cpp  compute_physics_test.cpp  main.cpp  main_test.cpp  some_tests.cpp
